# projet_kit_bigdata

./: .coverage  .gitignore  .gitignore.txt  README.md  data.json  pyproject.toml  todolist_gui.py
.github/workflows/: todolist_workflow.yml
docs/: conf.py  index.rst
src/: tache_comercial.py  tache_ingenieur.py  task.py
test/: test.py
tests/: test_tache.py  test_todolist.py
todolist/: Tache.py  __init__.py  tache_comercial.py  tache_ingenieur.py  todolist.py
