[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["leo.barberis@telecom-paris.fr <leo.barberis@telecom-paris.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
flake8 = "^6.1.0"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
